<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/row1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".12"
        android:orientation="vertical">
        <TextView
            android:id="@+id/text1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textAppearance="@android:style/Theme.Translucent"
            android:textSize="10sp"
            android:gravity="end"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:inputType="number"
            android:maxLength="14"
            android:id="@+id/text2"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textAppearance="@android:style/Theme.Translucent"
            android:textSize="40sp"
            android:gravity="end"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/row2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".12">
        <Button
            android:id="@+id/buttonClearMemory"
            android:textSize="25sp"
            android:text="@string/buttonClearMemory"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"/>
        <Button
            android:textSize="25sp"
            android:id="@+id/buttonAddMemory"
            android:text="@string/buttonAddmemory"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"/>
        <Button
            android:textSize="25sp"
            android:id="@+id/buttonSubMemory"
            android:text="@string/buttonSubMemory"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"/>
        <Button
            android:textSize="25sp"
            android:id="@+id/buttonRecallMemory"
            android:text="@string/buttonRecallMemory"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/row3"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".12">
        <Button
            android:id="@+id/buttonClear"
            android:textSize="25sp"
            android:text="@string/buttonClear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"/>
        <Button
            android:textSize="25sp"
            android:id="@+id/buttonDivide"
            android:text="@string/buttonDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"/>
        <Button
            android:textSize="25sp"
            android:id="@+id/buttonMulti"
            android:text="@string/buttonMulti"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"/>
        <Button
            android:text="del"
            android:textSize="25sp"
            android:id="@+id/buttonDelete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/row4"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".12">
        <Button
            android:id="@+id/buttonSeven"
            android:textSize="25sp"
            android:text="@string/buttonSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"/>
        <Button
            android:textSize="25sp"
            android:id="@+id/buttonEight"
            android:text="@string/buttonEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"/>
        <Button
            android:textSize="25sp"
            android:id="@+id/buttonNine"
            android:text="@string/buttonNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"/>
        <Button
            android:textSize="25sp"
            android:id="@+id/buttonSub"
            android:text="@string/buttonSub"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/row5"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".12">
        <Button
            android:id="@+id/buttonFour"
            android:textSize="25sp"
            android:text="@string/buttonFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"/>
        <Button
            android:textSize="25sp"
            android:id="@+id/buttonFive"
            android:text="@string/buttonFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"/>
        <Button
            android:textSize="25sp"
            android:id="@+id/buttonSix"
            android:text="@string/buttonSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"/>
        <Button
            android:textSize="25sp"
            android:id="@+id/buttonAdd"
            android:text="@string/buttonAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".24"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".75"
            android:orientation="vertical" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".50">
                <Button
                    android:id="@+id/buttonOne"
                    android:textSize="25sp"
                    android:text="@string/buttonOne"
                    android:layout_weight=".33"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"/>
                <Button
                    android:id="@+id/buttonTwo"
                    android:textSize="25sp"
                    android:text="@string/buttonTwo"
                    android:layout_weight=".33"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"/>
                <Button
                    android:id="@+id/buttonThree"
                    android:textSize="25sp"
                    android:text="@string/buttonThree"
                    android:layout_weight=".33"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".50">
                    <Button
                        android:textSize="25sp"
                        android:id="@+id/buttonZero"
                        android:text="@string/buttonZero"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".66"/>
                    <Button
                        android:id="@+id/buttonPoint"
                        android:textSize="25sp"
                        android:text="@string/buttonPoint"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".34"/>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/buttonEqual"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/buttonEqual"
            android:textSize="25sp" />
    </LinearLayout>
</LinearLayout>